--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
       canvas {
   display: block;
 }
+  #score{
+    height: auto;
+    width: auto;
+    position: absolute;
+    top: 20px;
+    right: 0;
+}
+#gameOver{
+    display: none;
+  font-size: 70px;
+  position: absolute;
+  left: calc(50% - 181px);
+  top: calc(50% - 40px);
+  width: 362px;
+  height: 80px;
+  color: #525252;
+}
      
   </style>
   </head>
