--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     <script src="unicorn.js"></script>
     <script src="train.js"></script>
     <script src="sketch.js"></script>
+     </div>
+    <div id="score">Score<b>00</b></div>
+    <div id="gameOver">Game Over</div>
+
+    </div>
+     <script src="pr.js"></script>
    
   </body>
 </html>
